--- a/WebAppLogin/Views/Shared/_LayoutRegistrarCuenta.cshtml
+++ b/WebAppLogin/Views/Shared/_LayoutRegistrarCuenta.cshtml
@@ -32,7 +32,7 @@
                         </div>
                     </li>*@
                     <li class="nav-item">
-                        @Html.ActionLink("Registrarse", "RegistrarCuenta", "Home", new { @class = "nav-link" })
+                        @Html.ActionLink("Registrarse", "vRegistrarCuenta", "Home", new { @class = "nav-link" })
                     </li>
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
