--- a/WebAppLogin/Views/Home/vLogin.cshtml
+++ b/WebAppLogin/Views/Home/vLogin.cshtml
@@ -44,7 +44,7 @@
         <td></td>
     </tr>
     <tr>
-        <td><a href="@Url.Action("RegistrarCuenta", "Home")"><span>Registrarse</span></a></td>
+        <td><a href="@Url.Action("vRegistrarCuenta", "Home")"><span>Registrarse</span></a></td>
         <td></td>
     </tr>
                 </table>
