--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        @Html.ActionLink("Perfil", "AccountProfile", "Home", new { id = Session["UserID"] }, new { @class = "nav-link" })
+                        @Html.ActionLink("Perfil", "vRegistrarCuenta", "Home", new { id = Session["UserID"] }, new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("Cerrar sesión", "Logout", "Home", null, new { @class = "nav-link" })
