Párrafo explicativo en registrar cuentas, ocultar y mostrar contraseña en usuario final.

--- a/WebAppLogin/Views/Registrar/vPropietarios.cshtml
+++ b/WebAppLogin/Views/Registrar/vPropietarios.cshtml
@@ -15,13 +15,13 @@
             <div class="col-lg-6">
                 <div class="bs-component">
                     <form id="frmEdition">
-                        @Html.CtrlInput(id: "txtTipoId", type: "text", label: "Tipo Id", columnDataName: "Tipo_Id")
-                        @Html.CtrlInput(id: "txtId", type: "text", label: "Id", columnDataName: "Id")
+                        @Html.CtrlInput(id: "txtTipoId", type: "text", label: "Tipo ID", columnDataName: "Tipo_Id")
+                        @Html.CtrlInput(id: "txtId", type: "text", label: "Identificación", columnDataName: "Id")
                         @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
                         @Html.CtrlInput(id: "txtApellido", type: "text", label: "Apellidos", columnDataName: "Apellidos")
                         @Html.CtrlInput(id: "txtCorreo", type: "email", label: "Correo", columnDataName: "Email")
-                        @Html.CtrlInput(id: "txtTelefono", type: "tel", label: "Telefono", columnDataName: "Telefono")
-                        @Html.CtrlInput(id: "txtTelefono", type: "date", label: "Fecha nacimiento", columnDataName: "Fecha_Nac")
+                        @Html.CtrlInput(id: "txtTelefono", type: "tel", label: "Teléfono", columnDataName: "Telefono")
+                        @Html.CtrlInput(id: "txtTelefono", type: "date", label: "Fecha de nacimiento", columnDataName: "Fecha_Nac")
                     </form>
                 </div>
             </div>
