--- a/WebAppLogin/Views/Shared/_LayoutRegistrarCuenta.cshtml
+++ b/WebAppLogin/Views/Shared/_LayoutRegistrarCuenta.cshtml
@@ -48,10 +48,10 @@
         <p>Después de ingresar sus datos personales recibirá un código en su correo y uno distinto en su teléfono celular. Deberá confirmar ambos para activar su cuenta.</p>
     </div>
     <div class="container body-content">
-        <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
+        @*<div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
             <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
             <span id="alert_message"></span>
-        </div>
+        </div>*@
         @RenderBody()
         <hr />
 
