--- a/WebAppLogin/Views/Shared/Error.cshtml
+++ b/WebAppLogin/Views/Shared/Error.cshtml
@@ -17,6 +17,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
             </div>
+            <li class="nav-item">
+                @Html.ActionLink("Cerrar sesión", "Logout", "Home", null, new { @class = "nav-link" })
+            </li>
         </div>
     </div>
     <hgroup>
