--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -26,16 +26,50 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Opciones</a>
                         <div class="dropdown-menu">
-                            @Html.ActionLink("Gestión de Suscripciones", "vPerfil_Admin_Suscripciones", "Home", null, new { @class = "nav-link" })
-                            <div class="dropdown-divider"></div>
-                            @Html.ActionLink("Gestión de usuarios", "vReg_Admin", "Home", null, new { @class = "nav-link" })
-                            @Html.ActionLink("Gestión de propiedades", "vPropiedades", "Home", null, new { @class = "nav-link" })
+                            @if (Session["IdRol"].ToString() == "01")
+                            {
+                                @Html.ActionLink("Gestión de suscripciones", "vPerfil_Admin_Suscripciones", "Home", null, new { @class = "nav-link" })
+                                <div class="dropdown-divider"></div>
+                                @Html.ActionLink("Gestión de usuarios", "vReg_Admin", "Home", null, new { @class = "nav-link" })
+                            }
+                            else if (Session["IdRol"].ToString() == "02")
+                            {
+                                @Html.ActionLink("Gestión de propiedades", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
+                                <div class="dropdown-divider"></div>
+                            }
+                            else if (Session["IdRol"].ToString() == "03")
+                            {
+                                @Html.ActionLink("Métodos de pago", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
+                                <div class="dropdown-divider"></div>
+                            }
+                            else if (Session["IdRol"].ToString() == "04")
+                            {
+                                @Html.ActionLink("Gestión de agentes", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
+                                <div class="dropdown-divider"></div>
+                            }
+                            else if (Session["IdRol"].ToString() == "05")
+                            {
+                                @Html.ActionLink("Gestión de propiedades", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
+                                <div class="dropdown-divider"></div>
+                            }
+                            else if (Session["IdRol"].ToString() == "06")
+                            {
+                                @Html.ActionLink("Gestión de propiedades", "vPropiedades", "Perfiles", null, new { @class = "nav-link" })
+                                <div class="dropdown-divider"></div>
+                            }
                         </div>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        @Html.ActionLink("Perfil", "vRegistrarCuenta", "Home", new { id = Session["UserID"] }, new { @class = "nav-link" })
+                        @if (Session["IdRol"].ToString() == "05")
+                        {
+                            @Html.ActionLink(Session["Nombre"].ToString(), "AccountProfile", "Perfiles", null, new { @class = "nav-link" })
+                        }
+                        else
+                        {
+                            @Html.ActionLink(Session["Nombre"].ToString(), "UsuarioProfile", "Perfiles", null, new { @class = "nav-link" })
+                        }
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("Cerrar sesión", "Logout", "Home", null, new { @class = "nav-link" })
