--- a/WebAppLogin/Views/Perfiles/AccountProfile.cshtml
+++ b/WebAppLogin/Views/Perfiles/AccountProfile.cshtml
@@ -76,6 +76,13 @@
                             </td>
                         </tr>
 
+                        <tr>
+                            <th>Mensaje:</th>
+                            <td>
+                                @*Html.Label(cuenta.Mensaje)*@
+                            </td>
+                        </tr>
+
                         @if (cuenta.ID_ROL != "05" && cuenta.ID_ROL != "06")
                         {
                             <tr>
