--- a/WebAppLogin/Views/Registrar/vPropietarios.cshtml
+++ b/WebAppLogin/Views/Registrar/vPropietarios.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "vPropietarios";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout_Login.cshtml";
 }
 
 <script src="~/Scripts/Views/vPropietarios.js"></script>
@@ -14,8 +14,17 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="bs-component">
+                    <div>
+                        <label>Tipo de Identificación</label>
+                    </div>
+                    <select name="Tipo_Id" id="tipo-id-Prop">
+                        <option value="">Seleccione uno</option>
+                        <option value="Física">Física</option>
+                        <option value="Jurídica">Jurídica</option>
+                        <option value="DIMEX">DIMEX</option>
+                        <option value="Pasaporte">Pasaporte</option>
+                    </select>
                     <form id="frmPropietario">
-                        @Html.CtrlInput(id: "txtTipoId", type: "text", label: "Tipo ID", columnDataName: "Tipo_Id")
                         @Html.CtrlInput(id: "txtId", type: "text", label: "Identificación", columnDataName: "Id")
                         @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
                         @Html.CtrlInput(id: "txtApellido", type: "text", label: "Apellidos", columnDataName: "Apellidos")
