--- a/WebAppLogin/Views/Shared/_LayoutRegistrarCuenta.cshtml
+++ b/WebAppLogin/Views/Shared/_LayoutRegistrarCuenta.cshtml
@@ -37,7 +37,7 @@
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Views/">@Session["FullName"]</a>
+                        <a class="nav-link" href="~/Views/">@*Session["FullName"]*@</a>
                     </li>
                 </ul>
             </div>
